--- a/index.html
+++ b/index.html
@@ -64,14 +64,26 @@
             padding: 10px;
             border-radius: 10px;
         }
+
+        .help-message {
+            margin-top: 20px;
+            font-size: 18px;
+            color: #fff;
+            font-weight: bold;
+            background-color: #444;
+            padding: 15px;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1 class="title">Welcome to BonkBros</h1>
         <div class="buttons">
-            <button class="button" onclick="window.location.href='#'">Access BonkBros Mail</button>
-            <button class="button" onclick="window.location.href='#'">Access BonkBros Chat</button>
+            <button class="button" onclick="window.location.href='https://accounts.zoho.com/signin?servicename=VirtualOffice&signupurl=https://www.zoho.com/mail/zohomail-pricing.html&serviceurl=https://mail.zoho.com'">Access BonkBros Mail</button>
+        </div>
+        <div class="help-message">
+            If you need help or have a problem, just talk to me (joshua)
         </div>
         <footer>
             <p class="footer-text">Made BY Josh X ZOHO Mail</p>
