--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BonkBros Access</title>
+    <title>I LOVE JOSHUA RYAN</title>
     <style>
         * {
             margin: 0;
@@ -80,13 +80,14 @@
     <div class="container">
         <h1 class="title">Welcome to BonkBros</h1>
         <div class="buttons">
-            <button class="button" onclick="window.location.href='https://accounts.zoho.com/signin?servicename=VirtualOffice&signupurl=https://www.zoho.com/mail/zohomail-pricing.html&serviceurl=https://mail.zoho.com'">Access BonkBros Mail</button>
+            <button class="button" onclick="window.location.href='https://shorturl.at/lv08e'">get in to the joshua supper slay email thingy</button>
         </div>
         <div class="help-message">
             If you need help or have a problem, just talk to me (joshua)
         </div>
         <footer>
             <p class="footer-text">Made BY Josh X ZOHO Mail</p>
+             <p class="footer-text">JOSHUA SLAYS SO MUCH</p>
         </footer>
     </div>
 </body>
