--- a/index.html
+++ b/index.html
@@ -80,14 +80,15 @@
     <div class="container">
         <h1 class="title">Welcome to BonkBros</h1>
         <div class="buttons">
-            <button class="button" onclick="window.location.href='https://shorturl.at/lv08e'">get in to the joshua supper slay email thingy</button>
+            <button class="button" onclick="window.location.href='https://shorturl.at/lv08e'">get in to the joshua supper slay email thingy (by chicking this button i show that i love josh)</button>
         </div>
         <div class="help-message">
             If you need help or have a problem, just talk to me (joshua)
         </div>
         <footer>
             <p class="footer-text">Made BY Josh X ZOHO Mail</p>
-             <p class="footer-text">JOSHUA SLAYS SO MUCH</p>
+             <p class="footer-text">JOSHUA SLAYS SO MUCH</p
+              <p class="footer-text">i LOVE JOSHUA AND LUCAS WHHITE AND ROBBYYYYYYYYY</p>
         </footer>
     </div>
 </body>
