--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background: #222;
+            background: url('bd.png') no-repeat center center fixed;
+            background-size: cover;
             color: #fff;
             height: 100vh;
             display: flex;
@@ -23,7 +24,7 @@
 
         .container {
             text-align: center;
-            background: #333;
+            background: rgba(51, 51, 51, 0.8); /* Semi-transparent background */
             padding: 40px;
             border-radius: 15px;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
@@ -80,15 +81,15 @@
     <div class="container">
         <h1 class="title">Welcome to BonkBros</h1>
         <div class="buttons">
-            <button class="button" onclick="window.location.href='https://shorturl.at/lv08e'">get in to the joshua supper slay email thingy (by chicking this button i show that i love josh)</button>
+            <button class="button" onclick="window.location.href='https://shorturl.at/lv08e'">get in to the joshua supper slay email thingy (by clicking this button I show that I love josh)</button>
         </div>
         <div class="help-message">
             If you need help or have a problem, just talk to me (joshua)
         </div>
         <footer>
             <p class="footer-text">Made BY Josh X ZOHO Mail</p>
-             <p class="footer-text">JOSHUA SLAYS SO MUCH</p
-              <p class="footer-text">i LOVE JOSHUA AND LUCAS WHHITE AND ROBBYYYYYYYYY</p>
+            <p class="footer-text">JOSHUA SLAYS SO MUCH</p>
+            <p class="footer-text">I LOVE JOSHUA AND LUCAS WHITE AND ROBBYYYYYYYYY</p>
         </footer>
     </div>
 </body>
