--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I LOVE JOSHUA RYAN</title>
+    <title>I LOVE JOSH</title>
     <style>
         * {
             margin: 0;
@@ -79,7 +79,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">Welcome to BonkBros</h1>
+        <h1 class="title">Welcome to loving joshua place</h1>
         <div class="buttons">
             <button class="button" onclick="window.location.href='https://shorturl.at/lv08e'">get in to the joshua supper slay email thingy (by clicking this button I show that I love josh)</button>
         </div>
