--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="container">
         <h1 class="title">Welcome to loving joshua place</h1>
         <div class="buttons">
-            <button class="button" onclick="window.location.href='https://shorturl.at/lv08e'">get in to the joshua supper slay email thingy (by clicking this button I show that I love josh)</button>
+            <button class="button" onclick="window.location.href='https://accounts.zoho.com/signin?servicename=ZohoHome&signupurl=https://www.zoho.com/signup.html'">get in to the joshua supper slay email thingy (by clicking this button I show that I love josh)</button>
         </div>
         <div class="help-message">
             If you need help or have a problem, just talk to me (joshua)
